Added the video playback functional

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 							<li>У Всеволода обучаются президенты и первые чеки сетевых кампаний!</li>
 						</ul>
 						<div class="video-invitation">
-							<a class="play-button"><img src="img/triangle_white.svg" alt=""></a>
+							<a href="https://www.youtube.com/watch?v=q_2UGi0vWcY&iv_load_policy=3&controls=0&disablekb=0&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/triangle_white.svg" alt=""></a>
 							<div class="info-right">
 								<div class="name">Видеоприглашение</div>
 								<div class="time">2:04</div>
@@ -420,6 +420,7 @@
 		</div>
 	</footer>
 
+	<script src="js/jquery.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
