Changes from Igor

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 	</div>
 
-	<div class="franklin-block">
+	<div class="franklin-block" id="whats-new">
 		<div class="container">
 			<img src="img/franklin.png" srcset="img/franklin.png 1x, img/franklin@2x.png 2x" alt="" class="franklin desktop">
 			<img src="img/franklin_mobile.png" srcset="img/franklin_mobile.png 1x, img/franklin_mobile@2x.png 2x" alt="" class="franklin mobile">
@@ -100,7 +100,7 @@
 					<div class="description">Если Вы застряли в маленьких продажах и пришло время подниматься</div>
 				</div>
 			</div>
-			<a href="" class="button">бесплатное участие</a>
+			<a href="#registration" class="button">бесплатное участие</a>
 		</div>
 	</div>
 
@@ -110,11 +110,11 @@
 		<div class="container">
 			<div class="title-white">Это единственное,<br>что принесет вам деньги!</div>
 			<div class="description">Именно поэтому эта конференция исключительно важна для каждого</div>
-			<a href="" class="button">бесплатное участие</a>
+			<a href="#registration" class="button">бесплатное участие</a>
 		</div>
 	</div>
 
-	<div class="third-promo">
+	<div class="third-promo" id="for-whom">
 		<div class="container">
 			<div class="title-dark">КОМУ НЕОБХОДИМА<br>КОНФЕРЕНЦИЯ:</div>
 			<div class="advantages">
@@ -134,7 +134,7 @@
 					<div class="description">Экспертам, которые находятся в процессе развития и знают, что такие конференции всегда дают новые идеи, новые мысли и направления движения</div>
 				</div>
 			</div>
-			<a href="" class="button">бесплатное участие</a>
+			<a href="#registration" class="button">бесплатное участие</a>
 		</div>
 	</div>
 
@@ -168,10 +168,10 @@
 			</div>
 		</div>
 		<img src="img/tatarinov_mobile.png" srcset="img/tatarinov_mobile.png 1x, img/tatarinov_mobile@2x.png 2x" class="tatarinov mobile">		
-		<a href="" class="button">бесплатное участие</a>
+		<a href="#registration" class="button">бесплатное участие</a>
 	</div>
 
-	<div class="speakers">
+	<div class="speakers" id="speakers">
 		<div class="title-dark">Спикеры</div>
 		<div class="container">
 			<div class="list">
@@ -282,7 +282,7 @@
 				</div>
 			</div>
 		</div>
-		<a href="" class="button">бесплатное участие</a>
+		<a href="#registration" class="button">бесплатное участие</a>
 		<div class="modal"><div class="item"><img src="img/close-menu.svg" class="close" alt=""></div></div>	
 	</div>
 
@@ -293,31 +293,31 @@
 			<div class="title-white">СПИКЕРЫ ПРИГЛАШАЮТ</div>
 			<div class="list">
 				<div class="item">
-					<a href="#" class="play-button"><img src="img/pic1.png" alt="" class="video"></a>	
+					<a href="https://www.youtube.com/watch?v=ZoQgsPAizno?iv_load_policy=3&controls=0&disablekb=0&loop=1&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/pic1.png" alt="" class="video"></a>	
 					<div class="name">Игорь Манн</div>
 				</div>
 				<div class="item">
-					<a href="#" class="play-button"><img src="img/pic10.png" alt="" class="video"></a>	
+					<a href="https://www.youtube.com/watch?v=cTIx_Ot82xI?iv_load_policy=3&controls=0&disablekb=0&loop=1&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/pic10.png" alt="" class="video"></a>	
 					<div class="name">Марта Коронкевич</div>
 				</div>
 				<div class="item">
-					<a href="#" class="play-button"><img src="img/pic2.png" alt="" class="video"></a>	
+					<a href="https://www.youtube.com/watch?v=q_2UGi0vWcY?iv_load_policy=3&controls=0&disablekb=0&loop=1&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/pic2.png" alt="" class="video"></a>	
 					<div class="name">Всеволод Татаринов</div>
 				</div>
 				<div class="item">
-					<a href="#" class="play-button"><img src="img/pic11.png" alt="" class="video"></a>	
+					<a href="https://www.youtube.com/watch?v=a26NnU_20EI?iv_load_policy=3&controls=0&disablekb=0&loop=1&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/pic11.png" alt="" class="video"></a>	
 					<div class="name">Даниил Шардаков</div>
 				</div>
 				<div class="item">
-					<a href="#" class="play-button"><img src="img/pic7.png" alt="" class="video"></a>	
+					<a href="https://www.youtube.com/watch?v=sgrGxWUibHM?iv_load_policy=3&controls=0&disablekb=0&loop=1&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/pic7.png" alt="" class="video"></a>	
 					<div class="name">Павел Берестнев</div>
 				</div>
 				<div class="item">
-						<a href="#" class="play-button"><img src="img/pic6.png" alt="" class="video"></a>	
+						<a href="https://www.youtube.com/watch?v=4I2--WDtePg?iv_load_policy=3&controls=0&disablekb=0&loop=1&modestbranding=1&rel=0&showinfo=0&enablejsapi=1" class="play-button"><img src="img/pic6.png" alt="" class="video"></a>	
 					<div class="name">Олег Шевелев</div>
 				</div>
 			</div>
-			<a href="" class="button">бесплатное участие</a>
+			<a href="#registration" class="button">бесплатное участие</a>
 		</div>
 	</div>
 
@@ -365,7 +365,7 @@
 					<div class="description">Самая продуктивная среда</div>
 				</div>
 			</div>
-			<a href="" class="button">бесплатное участие</a>
+			<a href="#registration" class="button">бесплатное участие</a>
 		</div>
 	</div>
 
@@ -376,7 +376,7 @@
 			<div class="info">
 				<div class="title-white">НУЖНО БЫТЬ ГОТОВЫМ К НОВЫМ ВЫЗОВАМ</div>
 				<div class="description">Чтобы не остаться за бортом рынка, уже недостаточно идти в ногу со временем</div>
-				<a href="" class="button">бесплатное участие</a>
+				<a href="#registration" class="button">бесплатное участие</a>
 			</div>
 		</div>
 	</div>
