Fixed the mobile menu navigation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<a href="#whats-new" class="nav-item">Что нового</a>
 				<a href="#for-whom" class="nav-item">Для кого</a>
 				<a href="#registration" class="nav-item">Регистрация</a>
-				<input type="button" value="Бесплатное участие" class="mobile button">
+				<a href="#registration" class="mobile button">бесплатное участие</a>
 				<img src="img/close-menu.svg" class="mobile close" alt="">
 			</nav>
 		</div>
@@ -67,7 +67,7 @@
 		<div class="container">
 			<div class="info">
 				<div class="title-white">ПОЛУЧИ <br>НАДЕЖНУЮ ФОРМУЛУ<br> УВЕЛИЧЕНИЯ ПРОДАЖ</div>
-				<a href="#" class="button">бесплатное участие</a>
+				<a href="#registration" class="button">бесплатное участие</a>
 			</div>
 		</div>
 
