mobile view fixes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<div class="title-info-2">с 19:00 - 22:00 Мск Online</div>
 						</div>
 						<div class="title-info">Международная<br>онлайн-конференция для сетевиков</div>
-						<div class="big-title">
+						<div class="big-title same">
 							академия<br>эффективного<br>
 							<div class="t-blue">рекрутинга</div>
 						</div>
@@ -318,7 +318,7 @@
 	</div>
 	<!-- END FOR WHOM BLOCK -->
 
-	<div class="organizators-block">
+	<div class="organizators-block overflow-hidden">
 		<img src="img/bg-organizators.jpg" alt="" class="bg">
 		<div class="container">
 			<div class="row">
