--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 
-    <title>Академия эффективного рекрутинга</title>
+	
+	<script src="rellax.min.js"></script>
+
+	<title>Академия эффективного рекрутинга</title>
+	
+
   </head>
   <body>
 
-	<div class="hero-block">
+	<div class="hero-block z-2">
 		<picture class="bg">
 			<source media="(max-width: 768px)" srcset="img/bg-hero-mobile.jpg 1x, img/bg-hero-mobile@2x.jpg 2x">
 			<img src="img/bg-hero.jpg" srcset="img/bg-hero.jpg 1x, img/bg-hero@2x.jpg 2x" alt="">
@@ -47,14 +52,21 @@
 									<span class="logo"><img src="img/businessman.svg" alt=""></span>
 								</a>
 							</div>
-							<div class="textprice">
+							<div class="textprice z-3">
 									Стоимость записей конференции <div class="t-blue">9 900 рублей</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				
+				<div class="col-6 d-none d-lg-block parallax">
+						<div class="rellax" style="position: absolute; left:0;top: -313px;" data-rellax-speed="-24"><img src="img/bg-icon.png" width="205px"></div>
+						<div class="rellax" style="position: absolute; left:50%; top:-307px;" data-rellax-speed="-34" width="319px"><img src="img/bg-icon.png" alt=""></div>
+						<div class="rellax" style="position: absolute; top: -200px; right: 0;" data-rellax-speed="-18"><img src="img/bg-icon.png" alt="" width="123px"></div>
+				</div>
 			</div>
-		</div>
+		</div>		
+		
 	</div>
 
     <div class="video-message-block">
@@ -72,7 +84,7 @@
 					<div class="title">ПОСМОТРИТЕ ВИДЕООБРАЩЕНИЕ</div>
 				</div>
 				<div class="col-md-6 col-lg-5 d-flex flex-wrap justify-content-center">
-					<div class="video-message">
+					<div class="video-message z-3">
 						<div class="wrapper">
 							<div class="tatarinov">
 								<img src="img/tatarinov-video-message.png" srcset="img/tatarinov-video-message.png 1x, img/tatarinov-video-message@2x.png 2x" alt="">
@@ -86,16 +98,15 @@
 				</div>
 			</div>
 		</div>
-
 	</div> <!-- END VIDEO MESSAGE BLOCK -->
-
-	<div class="why-block overflow-hidden">
+	
+	<div class="why-block overflow-hidden pt100 z-2">
 		<div class="container position-relative">
 			<div class="row">
 				<div class="col-12">
 					<div class="sub-title">ПОЧЕМУ РЕКРУТИНГ –</div>
 					<div class="title t-blue">ЭТО САМОЕ ГЛАВНОЕ</div>
-					<div class="title-info">для преуспевающего в <br>бизнесе сетевика в 2019 году?</div>
+					<div class="title-info">для преуспевающего в <br class="d-none d-md-block">бизнесе сетевика в 2019 году?</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="text">
@@ -162,45 +173,45 @@
 		<div id="info-block">
 			<div class="item">
 				<div class="title">Что работает сейчас в рекрутинге и что в нем давно не работает, основные заблуждения сетевиков</div>
-				<img src="https://source.unsplash.com/random/600x600" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Соц. сети и smm продвижение для МЛМ. Мифы и реальность</div>
-				<img src="https://source.unsplash.com/random/600x600?2" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&2" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Как работает автоматический рекрутинг, плюсы и минусы. Что обязательно нужно использовать в своем бизнесе.</div>
-				<img src="https://source.unsplash.com/random/600x600?3" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&3" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Обзор самых эффективных соц. сетей для МЛМ</div>
-				<img src="https://source.unsplash.com/random/600x600?4" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&4" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Самый высоко-конверсионный сценарий рекрутинга 2017 года. Что из него нужно взять на вооружение в 2018 году.</div>
-				<img src="https://source.unsplash.com/random/600x600?5" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&5" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Автоворонки в МЛМ, их специфика и практическое применение.</div>
-				<img src="https://source.unsplash.com/random/600x600?6" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&6" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Все о рекрутинге, который приносит реальные деньги</div>
-				<img src="https://source.unsplash.com/random/600x600?7" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&7" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Специфика рекрутинга рассчитанная на долгосрочные продуктивные отношения в команде</div>
-				<img src="https://source.unsplash.com/random/600x600?8" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&8" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Правильная дупликация и самые ужасные ошибки онлайн, которые Вы не должны дуплицировать</div>
-				<img src="https://source.unsplash.com/random/600x600?9" alt="">
+				<img src="https://source.unsplash.com/random/600x600?office&9" alt="">
 			</div>
 		</div>
 
 	</div>
 
-	<div class="three-reasons-block bg-blue">
+	<div class="three-reasons-block bg-blue pt100 z-2">
 
 		<div class="container">
 			<div class="row">
@@ -271,6 +282,9 @@
 	</div><!-- END  THREE REASONS BLOCK -->
 
 	<div class="for-whom-block bg-gray">
+			<div class="rellax3" style="position: absolute; right: 10px; top: -370px;" data-parallax="1.5"><img src="img/bg-icon.png" width="98px"></div>
+			<div class="rellax3" style="position: absolute; right:10%; top:-307px;" data-parallax="2"><img src="img/bg-icon.png"  width="205px" alt=""></div>
+			<div class="rellax3" style="position: absolute; top: -429px; left: 5%;" data-parallax="3"><img src="img/bg-icon.png" alt="" width="319px"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-12 text-lg-left text-center">
@@ -318,7 +332,7 @@
 	</div>
 	<!-- END FOR WHOM BLOCK -->
 
-	<div class="organizators-block overflow-hidden">
+	<div class="organizators-block pt100">
 		<img src="img/bg-organizators.jpg" alt="" class="bg">
 		<div class="container">
 			<div class="row">
@@ -351,7 +365,7 @@
 	</div>
 	<!-- END ORGANIZATORS BLOCK -->
 
-	<div class="speakers-block">
+	<div class="speakers-block z-2">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 text-lg-left text-center">
@@ -534,6 +548,7 @@
 	<div id="form">
 		<picture class="bg">
 			<source media="(max-width: 768px)" srcset="img/bg-form-mobile.jpg 1x, img/bg-form-mobile@2x.jpg 2x">
+			<source media="(max-width: 998px)" srcset="img/bg-form-mobile@2x.jpg">
 			<img src="img/bg-form.jpg" srcset="img/bg-form.jpg 1x, img/bg-form@2x.jpg 2x" alt="">
 		</picture>
 		<div class="container-fluid">
@@ -547,7 +562,7 @@
 					</div>
 					<div class="big-sub-title">Прокачать свои навыки в построении <br>МЛМ структуры своей мечты</div>
 				</div>
-				<div class="col-lg-6 d-flex flex-column justify-content-center overflow-hidden">
+				<div class="col-lg-6 d-flex flex-column justify-content-center align-items-center overflow-hidden">
 					<div class="mxw600">
 						<div class="cube">
 							<div class="wrapper-circle">
