add version for files and removed a parallax library

--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 
     <!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
-
+	<link rel="stylesheet" href="style.css?ver=1.0">
 	
-	<script src="rellax.min.js"></script>
-
 	<title>Академия эффективного рекрутинга</title>
 	
 
@@ -60,9 +57,9 @@
 				</div>
 				
 				<div class="col-6 d-none d-lg-block parallax">
-						<div class="rellax" style="position: absolute; left:0;top: -313px;" data-rellax-speed="-24"><img src="img/bg-icon.png" width="205px"></div>
-						<div class="rellax" style="position: absolute; left:50%; top:-307px;" data-rellax-speed="-34" width="319px"><img src="img/bg-icon.png" alt=""></div>
-						<div class="rellax" style="position: absolute; top: -200px; right: 0;" data-rellax-speed="-18"><img src="img/bg-icon.png" alt="" width="123px"></div>
+						<div class="rellax" style="position: absolute; left:0;top: -313px;" data-parallax="2"><img src="img/bg-icon.png" width="205px"></div>
+						<div class="rellax" style="position: absolute; left:50%; top:-307px;" data-parallax="3" width="319px"><img src="img/bg-icon.png" alt=""></div>
+						<div class="rellax" style="position: absolute; top: -200px; right: 0;" data-parallax="1.8"><img src="img/bg-icon.png" alt="" width="123px"></div>
 				</div>
 			</div>
 		</div>		
@@ -627,7 +624,7 @@
 	</div>
 	<!-- Optional JavaScript -->
 	<script src="https://www.youtube.com/iframe_api"></script>
-	<script src="script.js"></script>
+	<script src="script.js?ver=1.0"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
