Changed the images for programs and deleted unnesesary files

--- a/index.html
+++ b/index.html
@@ -170,39 +170,39 @@
 		<div id="info-block">
 			<div class="item">
 				<div class="title">Что работает сейчас в рекрутинге и что в нем давно не работает, основные заблуждения сетевиков</div>
-				<img src="https://source.unsplash.com/random/600x600?office" alt="">
+				<img src="img/001.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Соц. сети и smm продвижение для МЛМ. Мифы и реальность</div>
-				<img src="https://source.unsplash.com/random/600x600?office&2" alt="">
+				<img src="img/002.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Как работает автоматический рекрутинг, плюсы и минусы. Что обязательно нужно использовать в своем бизнесе.</div>
-				<img src="https://source.unsplash.com/random/600x600?office&3" alt="">
+				<img src="img/003.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Обзор самых эффективных соц. сетей для МЛМ</div>
-				<img src="https://source.unsplash.com/random/600x600?office&4" alt="">
+				<img src="img/004.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Самый высоко-конверсионный сценарий рекрутинга 2017 года. Что из него нужно взять на вооружение в 2018 году.</div>
-				<img src="https://source.unsplash.com/random/600x600?office&5" alt="">
+				<img src="img/005.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Автоворонки в МЛМ, их специфика и практическое применение.</div>
-				<img src="https://source.unsplash.com/random/600x600?office&6" alt="">
+				<img src="img/006.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Все о рекрутинге, который приносит реальные деньги</div>
-				<img src="https://source.unsplash.com/random/600x600?office&7" alt="">
+				<img src="img/007.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Специфика рекрутинга рассчитанная на долгосрочные продуктивные отношения в команде</div>
-				<img src="https://source.unsplash.com/random/600x600?office&8" alt="">
+				<img src="img/008.jpg" alt="">
 			</div>
 			<div class="item">
 				<div class="title">Правильная дупликация и самые ужасные ошибки онлайн, которые Вы не должны дуплицировать</div>
-				<img src="https://source.unsplash.com/random/600x600?office&9" alt="">
+				<img src="img/009.jpg" alt="">
 			</div>
 		</div>
 
